pod-security/Networkpolicy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: front-end
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
  labels:
    app: pointing-it
    env: uat
  namespace: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pointing-it
      version: "3"
  template:
    metadata:
      labels:
        app: pointing-it
        version: "3"
    spec:
      containers:
        - name: testcont
          image: nginx:latest
          # command: ["sh", "-c", "while true; do sleep 3600; done"]
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-traffic
  namespace: front-end
spec:
  podSelector:
    matchLabels:
      app: pointing-it
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pointing-it
      ports:
        - port: 80
          protocol: TCP
---
apiVersion: v1
kind: Namespace
metadata:
  name: back-end

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-egress
  labels:
    app: nginx-des
    env: uat
  namespace: back-end
spec:
  replicas: 1
  selector:
    matchLabels:
      version: "3"
      app: test-pod
  template:
    metadata:
      name: testtemp
      labels:
        app: test-pod
        version: "3"
    spec:
      containers:
        - name: testcont
          image: nginx:latest
          # command: ["sh", "-c", "while true; do sleep 3600; done"]
          ports:
            - containerPort: 80
